
cc_library(
	name = "interprocess",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_move//:move",
		"@com_github_bazelboost_date_time//:date_time",
		"@com_github_bazelboost_container//:container"
	],
)
